# matrix-tui

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  README.md  acceptance-criteria.md  backlog.md  pr-url.txt  pyproject.toml  screenshot.js
.github/workflows/: ci-feedback.yml  ci.yml
docs/: architecture.md  coding-agents-spec.md  github-issues-spec.md  implementation-guide.md  lifecycle-mgmt-implementation-guide.md  lifecycle-mgmt-verification-report.md  lifecycle-mgmt.md  memory-spec.md  multi_agent_routing.md  mvp_spec.md  notification_hook.md  programming-loop-spec.md  status.html  tmux_gemini_sessions.md
docs/plans/: 2026-03-12-headless-queue-design.md  2026-03-12-headless-queue-plan.md
docs/specs/: fix-duplicate-completion-comments.md
scripts/: check-ipc-logs.sh  deploy.sh  install-service.sh  setup-synapse.sh  test-ipc-hook.sh  test-multi-agent.sh  test-tmux-gemini.sh  test_minimax.py  validate_agents.py  validate_podman.py  validate_screenshot.py
specs/: complete-testing.md  gemini-orchestration-implementation-guide.md  gemini-orchestration-verification-report.md  gemini-orchestration.md  two-phase-github-pipeline.md
src/matrix_agent/: __main__.py  agent.py  bot.py  channels.py  (+5 more)
tests/: conftest.py  test_channels.py  test_channels_ci_fix.py  test_channels_unawaited_fix.py  test_config.py  test_core.py  test_core_github.py  test_decider.py  test_github_integration.py  test_integration.py  test_multi_agent.py  test_sandbox_auto_accept.py  test_sandbox_gemini.py  test_sandbox_utils.py  test_shutdown.py  test_state.py  test_tools_unit.py
(+13 files in other folders)
