[project]
name = "matrix-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio>=0.24",
    "aiofiles>=24.0",
    "litellm>=1.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_agent"]
